make sure we still warn of invalid permissions, optimize permission creation.  tweaks to templates, moving default read layout to tables instead of divs that never seem to align right

--- a/smartmin/static/css/smartmin_styles.css
+++ b/smartmin/static/css/smartmin_styles.css
@@ -117,6 +117,17 @@ span.label {
     padding-right: 10px;
     padding-top: 16px;
     padding-bottom: 10px;
+    text-align: right;
+}
+
+td.detail_label {
+    font-weight: bold;
+    padding: 5px;
+    text-align: right;
+}
+
+td.detail_value {
+    padding: 5px;
 }
 
 label {
